--- a/index.html
+++ b/index.html
@@ -22,25 +22,16 @@
     <title>Reuben Loane - Freelance Animator</title>
   </head>
   <body>
-    <header class="title container">
-      <a
-        href="https://www.google.com/search?q=reuben&oq=reuben&aqs=chrome..69i57j0i433i512j46i175i199i512j46i433i512j46i175i199i512j0i433i512j46i131i433i512j69i61.1025j0j7&sourceid=chrome&ie=UTF-8"
-        target="_blank"
-      >
-        <h1 class="title__reuben">Reuben</h1>
-      </a>
-      <a
-        href="https://www.google.com/search?q=loane&oq=loane&aqs=chrome.0.69i59j46i175i199i512l4j0i512j46i175i199i512j69i60.991j0j7&sourceid=chrome&ie=UTF-8"
-        target="_blank"
-      >
-        <h1 class="title__loane">Loane</h1>
-      </a>
-      <a
-        href="https://www.google.com/search?q=animation&oq=anim&aqs=chrome.0.69i59j69i57j0i433i512j0i512j46i433i512j46i131i433i512j69i60j69i61.1624j0j7&sourceid=chrome&ie=UTF-8"
-        target="_blank"
-      >
-        <h1 class="title__animation">animation</h1>
-      </a>
-    </header>
+    <div class="collapsible">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading about-me__heading">ABOUT ME</h2>
+      </header>
+      <div class="collapsible__content">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nisi?
+        </p>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
