--- a/index.html
+++ b/index.html
@@ -15,22 +15,65 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <title>Reuben Loane - Freelance Animator</title>
   </head>
   <body>
-    <div class="showreel-container">
-      <iframe
-        class="youtube-showreel"
-        src="https://www.youtube.com/embed/wqmbB1H4PEU?controls=0"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+    <div class="test-box">
+      <div class="cv-box">
+        <ul class="list">
+          <li class="list__item">
+            <span class="list__item-first-word">Role:</span>
+            Stop-Motion Animator
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Production:</span>
+            Scream Street
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Company:</span>
+            Factory
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Director:</span>
+            Geoff Walker
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Dates:</span>
+            Sept 2020 - Jul 2021
+          </li>
+        </ul>
+      </div>
+
+      <div class="cv-box">
+        <ul class="list">
+          <li class="list__item">
+            <span class="list__item-first-word">Role:</span>
+            Stop-Motion Animator
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Production:</span>
+            Scream Street
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Company:</span>
+            Factory
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Director:</span>
+            Geoff Walker
+          </li>
+          <li class="list__item">
+            <span class="list__item-first-word">Dates:</span>
+            Sept 2020 - Jul 2021
+          </li>
+        </ul>
+      </div>
     </div>
 
     <script src="js/main.js"></script>
