Define Contact Me.

--- a/index.html
+++ b/index.html
@@ -21,61 +21,23 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/1f5ecae7e2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Reuben Loane - Freelance Animator</title>
   </head>
   <body>
     <div class="test-box">
-      <div class="cv-box">
-        <ul class="list">
-          <li class="list__item">
-            <span class="list__item-first-word">Role:</span>
-            Stop-Motion Animator
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Production:</span>
-            Scream Street
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Company:</span>
-            Factory
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Director:</span>
-            Geoff Walker
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Dates:</span>
-            Sept 2020 - Jul 2021
-          </li>
-        </ul>
-      </div>
-
-      <div class="cv-box">
-        <ul class="list">
-          <li class="list__item">
-            <span class="list__item-first-word">Role:</span>
-            Stop-Motion Animator
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Production:</span>
-            Scream Street
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Company:</span>
-            Factory
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Director:</span>
-            Geoff Walker
-          </li>
-          <li class="list__item">
-            <span class="list__item-first-word">Dates:</span>
-            Sept 2020 - Jul 2021
-          </li>
-        </ul>
+      <div class="contact-information">
+        <a href="mailto:reubenloane@gmail.com"
+          ><i class="fas fa-phone icon"></i>reubenloane@gmail.com</a
+        >
+        <a href="tel:+447708762568"
+          ><i class="fas fa-envelope icon"></i>07708762568</a
+        >
       </div>
     </div>
-
     <script src="js/main.js"></script>
   </body>
 </html>
