Define social media content.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
     <title>Reuben Loane - Freelance Animator</title>
   </head>
   <body>
-    <div class="test-box">
-      <div class="contact-information">
-        <a href="mailto:reubenloane@gmail.com"
-          ><i class="fas fa-phone icon"></i>reubenloane@gmail.com</a
-        >
-        <a href="tel:+447708762568"
-          ><i class="fas fa-envelope icon"></i>07708762568</a
-        >
-      </div>
+    <div class="social-media">
+      <i class="fab fa-twitter icon social-media__icon"></i>
+      <i class="fab fa-linkedin-in icon social-media__icon"></i>
+      <i class="fab fa-youtube icon social-media__icon"></i>
     </div>
     <script src="js/main.js"></script>
   </body>
