--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         <div class="collapsible__content">
           <div class="contact-information">
             <a href="mailto:reubenloane@gmail.com"
-              ><i class="fas fa-phone icon"></i>reubenloane@gmail.com</a
+              ><i class="fas fa-phone icon contact-me__icon"></i>reubenloane@gmail.com</a
             >
             <a href="tel:+447708762568"
-              ><i class="fas fa-envelope icon"></i>07708762568</a
+              ><i class="fas fa-envelope icon contact-me__icon"></i>07708762568</a
             >
           </div>
         </div>
