Define Third Container.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <title>Reuben Loane - Freelance Animator</title>
   </head>
   <body>
+
+
+
+    
     <div class="container first-container">
       <div class="wrapper--showreel-cv">
         <div class="collapsible card--showreel">
@@ -170,7 +174,16 @@
       </div>
     </div>
 
-    
+    <div class="container third-container">
+      <div class="collapsible card--footer">
+        <header class="collapsible__header header__footer">
+          <h2 class="collapsible__heading">Footer</h2>
+        </header>
+        <div class="collapsible__content">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nisi?</p>
+        </div>
+      </div>
+    </div>
 
     <script src="js/main.js"></script>
   </body>
