--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <div class="collapsible__content">
             <div class="cv--boxes">
               <div class="cv-box">
-                <ul class="list">
+                <ul class="list list--cv">
                   <li class="list__item">
-                    <span class="list__item-first-word">Role:</span>
+                    <span class="list__item-first-word"></span>
                     Stop-Motion Animator
                   </li>
                   <li class="list__item">
@@ -102,7 +102,7 @@
               <div class="cv-box">
                 <ul class="list">
                   <li class="list__item">
-                    <span class="list__item-first-word">Role:</span>
+                    <span class="list__item-first-word"></span>
                     Stop-Motion Animator
                   </li>
                   <li class="list__item">
